# pydantic-openapi

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
doc/examples/: models.py  oapigen.ini  openapigen.ini  wrong_models.py
src/: __init__.py  camel_case.py  cli.py  command_line.py  openapi_generator.py
src/pydantic_openapi/: command_line.py  openapi_generator.py
