[tool.poetry]
name = "pydantic_openapi"
version = "0.1.4"
description = "Generate OpenAPI schema from pydantic models"
authors = ["Yury Blagoveshchenskiy <yurathestorm@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^0.16"
inflection = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
openapigen = 'pydantic_openapi.command_line:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
